--- a/www/templates/secure.html
+++ b/www/templates/secure.html
@@ -1,5 +1,6 @@
 <ion-view title="Banquet Card and Details" ng-init="">    
     <ion-content>
+	<button class="button button-icon icon ion-camera" ng-click="upload()"> Take Photo</button>
        <div class="row" ng-repeat="image in images" ng-if="$index % 4 === 0">
             <div class="col col-25" ng-if="$index < images.length">
                 <img ng-src="data:image/jpeg;base64,{{images[$index].image}}" width="100%" />
@@ -19,7 +20,7 @@
                     <input ng-model="userData.language" type="text" placeholder="Language Spoken" />
                 </label>
                 <label class="item item-input">
-                    <input ng-model="userData.meal" type="text" placeholder="Meal preference" />
+                    <input ng-model="userData.mealPref" type="text" placeholder="Meal preference" />
                 </label>
                 <label class="item item-input">
                     <input ng-model="userData.age" type="text" placeholder="Age" />
@@ -32,8 +33,9 @@
                 </label>
                 <label class="item item-input">
                     <input ng-model="userData.physician" type="text" placeholder="Primary care Physician" />
-                </label>				
-				<button class="button button-icon icon ion-camera" ng-click="upload()"> Take Photo & Submit</button>
+                </label>
+				<div><span>&nbsp;</span><div>
+				<button class="button button-balanced" ng-click="save()"> Save Details</button>
             </div> 
         <div>	
     </ion-content>
