logout button added

--- a/www/templates/secure.html
+++ b/www/templates/secure.html
@@ -36,6 +36,7 @@
                 </label>
 				<div><span>&nbsp;</span><div>
 				<button class="button button-balanced" ng-click="save()"> Save Details</button>
+				<button class="button button-balanced" ng-click="logOut()"> Log Out</button>
             </div> 
         <div>	
     </ion-content>
